add: ocr
